# bw-auto

./: .env.example  .gitignore  CLAUDE.md  bw-auto.spec  pyproject.toml  readme.md  run.py  启动.bat
src/bw_auto/: config.py  http_client.py  main.py
src/bw_auto/api/: client.py  show_api.py
src/bw_auto/auth/: qrcode.py  session.py
src/bw_auto/bot/: engine.py
src/bw_auto/core/: item.py  models.py  order.py  scheduler.py
src/bw_auto/services/: selection.py
src/bw_auto/utils/: terminal.py  time_sync.py
src/bw_auto/web/: app.py  state.py
src/bw_auto/web/static/: index.html
