[project]
name = "bw-auto"
version = "0.2.0"
description = "Bilibili 会员购抢票工具"
requires-python = ">=3.11"

dependencies = [
    "httpx>=0.27",
    "qrcode>=7.4",
    "Pillow>=10.0",
    "rich>=13.0",
    "click>=8.1",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
bw-auto = "bw_auto.main:cli"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
